# keepgate

./: .gitignore  CONTRACT.md  CONTRACT_V1.md  Cargo.toml  KEEPGATE_PHASE1_VALIDATION.md  LIMITATIONS.md  README.md  THREAT_MODEL.md  keepgate.py  keepgate_adapter.py  test_keepgate_adapter.py
config/: default.toml
examples/: cli_examples.md  ignis_exec_runner_patch.py  patch_ignis_exec_runner.py
src/: approvals.rs  data_classifier.rs  leak_detector.rs  lib.rs  main.rs  output_gate.rs
